manifests/mariawp/wordpress-deployment-pvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP #default
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
spec: # specification for deployment resource
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template: # blueprint for pods
    metadata:
      labels:
        app: wordpress
    spec: # specification for pods
      containers:
      - name: wordpress
        image: wordpress:6.0.1-apache ##4.8-apache
        ports:
        - containerPort: 80
